--- a/estilo.css
+++ b/estilo.css
@@ -6,7 +6,31 @@ body {
 	margin: 0;
 	padding: 0;
 }
-
+#quienes-somos {
+	background-image: url(https://www.leotertenerife.com/wp-content/uploads/2016/07/FONDO-ROJO.png);
+	background-size: cover;
+	background-position: center;
+	padding: 30px;
+	text-align: justify;
+  }
+  
+  #quienes-somos h2 {
+	font-size: 36px;
+	font-weight: bold;
+	color: #fff;
+	margin-bottom: 20px;
+	text-shadow: 2px 2px 5px #000;
+  }
+  
+  #quienes-somos p {
+	font-size: 18px;
+	line-height: 1.5;
+	color: #fff;
+	margin-bottom: 20px;
+	text-shadow: 2px 2px 5px #000;
+  }
+  
+  
 /* Estilos para la cabecera */
 header {
 	background-color: #fff;
@@ -22,17 +46,42 @@ h1 {
 	
 }
 
-/* Estilos para las secciones */
-section {
-	padding: 50px;
+#ubicacion {
 	background-color: #fff;
-	margin-bottom: 30px;
-	box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-}
+	padding: 80px 0;
+  }
+  
+  .section-title {
+	font-size: 36px;
+	font-weight: 700;
+	text-align: center;
+	margin-bottom: 40px;
+  }
+  
+  .section-description {
+	font-size: 18px;
+	font-weight: 400;
+	text-align: center;
+	margin-bottom: 50px;
+  }
+  
+  .map-container {
+	position: relative;
+	overflow: hidden;
+	padding-top: 56.25%; /* 16:9 aspect ratio */
+  }
+  
+  .map-container iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+  }  
 
 /* Estilos para el pie de página */
 footer {
-	background-color: #3421df;
+	background-color: #4a37ee;
 	padding: 20px;
 	color: #000000;
 	text-align: center;
@@ -52,5 +101,180 @@ footer {
   .redes-sociales img {
 	width: 30px;
 	height: 30px;
+  }
+  .logo {
+	width: 100px; 
+	height: auto;
+  }
+  #seccion4 {
+	background-color: #f26969;
+	padding: 50px;
+  }
+  
+  #seccion4 h2 {
+	text-align: center;
+	font-size: 36px;
+	margin-bottom: 30px;
+  }
+  
+  #contactanos {
+	background-color: #f7f7f7;
+	padding: 50px;
+  }
+  
+  #contactanos h2 {
+	text-align: center;
+	font-size: 32px;
+	margin-bottom: 30px;
+  }
+  
+  #contact-form {
+	display: flex;
+	flex-direction: column;
+	max-width: 600px;
+	margin: 0 auto;
+  }
+  
+  .form-group {
+	margin-bottom: 20px;
+  }
+  
+  .form-group label {
+	display: block;
+	margin-bottom: 5px;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  input[type="tel"],
+  textarea {
+	border: 1px solid #ccc;
+	padding: 10px;
+	width: 100%;
+	font-size: 16px;
+  }
+  
+  button[type="submit"] {
+	background-color: #0066cc;
+	color: #fff;
+	border: none;
+	padding: 10px 20px;
+	font-size: 16px;
+	cursor: pointer;
+	transition: background-color 0.3s ease;
+	margin-top: 20px;
+  }
+  
+  button[type="submit"]:hover {
+	background-color: #004c99;
+  }  
+  /* Estilos para la sección 2 */
+
+#seccion2 {
+	background-color: #f7f7f7;
+	padding: 80px 0;
+  }
+  
+  #seccion2 h2 {
+	text-align: center;
+	margin-bottom: 50px;
+  }
+  
+  .card {
+	margin-bottom: 30px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .card-img-top {
+	height: 200px;
+	object-fit: cover;
+  }
+  
+  .card-title {
+	font-size: 20px;
+	margin-bottom: 10px;
+  }
+  
+  .card-text {
+	font-size: 14px;
+	color: #666;
+	margin-bottom: 15px;
+  }
+  
+  .card-body {
+	padding: 20px;
+  }
+/* Estilos para la sección 3 */
+#seccion3 {
+	background-color: #ffebeb;
+	padding: 50px;
+	text-align: center;
+  }
+  
+  #seccion3 h2 {
+	font-size: 36px;
+	font-weight: bold;
+	margin-bottom: 30px;
+  }
+  
+  #seccion3 p {
+	font-size: 18px;
+  }
+  
+  #seccion3 .card {
+	border: none;
+	margin-bottom: 30px;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	transition: 0.3s;
+  }
+  
+  #seccion3 .card:hover {
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  #seccion3 .card-img-top {
+	height: 200px;
+	object-fit: cover;
+  }
+  
+  #seccion3 .card-title {
+	font-size: 24px;
+	font-weight: bold;
+	margin-bottom: 10px;
+  }
+  
+  #seccion3 .card-text {
+	font-size: 16px;
+	text-align: left;
+  }
+
+  .testimonios {
+	background-color: #f56565;
+	padding: 60px 0;
+  }
+  
+  .testimonio {
+	background-color: #f2abab;
+	padding: 20px;
+	border-radius: 10px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+	margin-bottom: 30px;
+  }
+  
+  .testimonio img {
+	border-radius: 50%;
+	width: 150px;
+	height: 120px;
+	margin-right: 20px;
+  }
+  
+  .testimonio .nombre {
+	font-weight: bold;
+	margin-bottom: 10px;
+  }
+  
+  .testimonio .contenido {
+	font-size: 1.2em;
+	font-family: Arial, sans-serif;
   }
   
