--- a/estilo.css
+++ b/estilo.css
@@ -414,34 +414,59 @@ button[type="submit"]:hover {
 	.testimonios {
 		background-color: #f8f8f8;
 		padding: 80px 0;
-		}
-		
-		.testimonio {
+	  }
+	  
+	  .testimonio {
 		background-color: #ffffff;
 		padding: 40px;
 		border-radius: 20px;
 		box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
 		margin-bottom: 50px;
-		}
-		
-		.testimonio img {
+	  }
+	  
+	  .testimonio img {
 		border-radius: 50%;
 		width: 110px;
 		height: 100px;
 		margin-right: 30px;
 		box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-		}
-		
-		.testimonio .nombre {
+	  }
+	  
+	  .testimonio .nombre {
 		font-size: 1.2em;
 		font-weight: bold;
 		margin-bottom: 20px;
 		color: #3e3e3e;
-		}
-		
-		.testimonio .contenido {
+	  }
+	  
+	  .testimonio .contenido {
 		font-size: 1.1em;
 		line-height: 1.5em;
 		font-family: "Open Sans", sans-serif;
 		color: #5e5e5e;
+	  }
+	  
+	  .testimonio:nth-child(even) {
+		text-align: right;
+	  }
+	  
+	  .testimonio:nth-child(even) img {
+		margin-right: 0;
+		margin-left: 30px;
+	  }
+	  
+	  @media (max-width: 767px) {
+		.testimonio {
+		  text-align: center;
 		}
+	  
+		.testimonio img {
+		  margin-right: 0;
+		  margin-bottom: 20px;
+		}
+	  
+		.testimonio .nombre {
+		  margin-bottom: 10px;
+		}
+	  }
+	  
