--- a/estilo.css
+++ b/estilo.css
@@ -405,62 +405,81 @@ button[type="submit"]:hover {
 	}
 	}
 
-	.testimonios {
-		background-color: #f8f8f8;
-		padding: 80px 0;
-	  }
-	  
-	  .testimonio {
-		background-color: #ffffff;
-		padding: 40px;
-		border-radius: 20px;
-		box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-		margin-bottom: 50px;
-	  }
-	  
-	  .testimonio img {
-		border-radius: 50%;
-		width: 110px;
-		height: 100px;
-		margin-right: 30px;
-		box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-	  }
-	  
-	  .testimonio .nombre {
-		font-size: 1.2em;
-		font-weight: bold;
-		margin-bottom: 20px;
-		color: #3e3e3e;
-	  }
-	  
-	  .testimonio .contenido {
-		font-size: 1.1em;
-		line-height: 1.5em;
-		font-family: "Open Sans", sans-serif;
-		color: #5e5e5e;
-	  }
-	  
-	  .testimonio:nth-child(even) {
-		text-align: right;
-	  }
-	  
-	  .testimonio:nth-child(even) img {
-		margin-right: 0;
-		margin-left: 30px;
-	  }
-	  
-	  @media (max-width: 767px) {
-		.testimonio {
-		  text-align: center;
-		}
-	  
-		.testimonio img {
-		  margin-right: 0;
-		  margin-bottom: 20px;
-		}
-	  
-		.testimonio .nombre {
-		  margin-bottom: 10px;
-		}
-	  }
-	  
+	/*MARCAS*/
+#marcas {
+	background-color: #F5F5F5;
+	padding: 80px 0;
+  }
+  
+  #marcas h2 {
+	font-size: 40px;
+	text-align: center;
+	margin-bottom: 40px;
+  }
+  
+  .marca {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 150px;
+	margin-bottom: 40px;
+	background-color: white;
+	border-radius: 10px;
+	box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+	transition: transform 0.2s ease-in-out;
+  }
+  
+  .marca:hover {
+	transform: scale(1.1);
+  }
+  
+  .marca img {
+	height: 100px;
+  }
+  
+  @media screen and (max-width: 768px) {
+	.marca {
+	  height: 120px;
+	}
+	.marca img {
+	  height: 80px;
+	}
+  }
+  
+  /*Nuevas marcas*/
+  .col-md-3:nth-child(5) .marca img {
+	height: 80px;
+  }
+  
+  .col-md-3:nth-child(5) .marca:hover {
+	transform: scale(1.1) rotate(-5deg);
+  }
+  
+  .col-md-3:nth-child(5) .marca {
+	background-color: white;
+  }
+  
+  .col-md-3:nth-child(6) .marca img {
+	height: 80px;
+  }
+  
+  .col-md-3:nth-child(6) .marca:hover {
+	transform: scale(1.1) rotate(5deg);
+  }
+  
+  .col-md-3:nth-child(6) .marca {
+	background-color: white;
+  }
+  
+  .col-md-3:nth-child(7) .marca img {
+	height: 80px;
+  }
+  
+  .col-md-3:nth-child(7) .marca:hover {
+	transform: scale(1.1) rotate(-5deg);
+  }
+  
+  .col-md-3:nth-child(7) .marca {
+	background-color: white;
+  }
+  
