--- a/estilo.css
+++ b/estilo.css
@@ -204,18 +204,18 @@ footer {
 }
 
 .social-icons a {
-  margin-right: 15px;
+  margin-right: 35px;
   text-decoration: none;
-  color: #000000;
+  color: #ffffff;
 }
 
 .social-icons a:hover {
-  color: #5c5c5c;
+  color: #fb0909;
 }
 
 .social-icons i {
-  font-size: 24px;
-  margin-right: 10px;
+  font-size: 30px;
+  margin-right: 20px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -309,102 +309,68 @@ button[type="submit"]:hover {
 	background-color: #f44336;
 }
 
-  /* Estilos para la sección 2 */
-
-#seccion2 {
-	background-color: #f7f7f7;
-	padding: 80px 0;
-  }
-  
-  #seccion2 h2 {
-	text-align: center;
-	margin-bottom: 50px;
-  }
-  
-  .card {
-	margin-bottom: 30px;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .card-img-top {
-	height: 200px;
-	object-fit: cover;
-  }
-  
-  .card-title {
-	font-size: 20px;
-	margin-bottom: 10px;
-  }
-  
-  .card-text {
-	font-size: 14px;
-	color: #666;
-	margin-bottom: 15px;
-  }
-  
-  .card-body {
-	padding: 20px;
-  }
-/* Estilos para la sección 3 */
+/* Estilos para la sección de productos */
 #productos {
-	background-color: #F9F9F9;
+	background-color: #f9f9f9;
 	padding: 50px;
 	text-align: center;
-	}
-	
-	#productos h2 {
+  }
+  
+  #productos h2 {
 	font-size: 36px;
 	font-weight: bold;
 	margin-bottom: 30px;
-	}
-	
-	#productos .container {
+  }
+  
+  #productos .container {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
-	}
-	
-	#productos .card {
+	justify-content: center; /* Cambiado de "space-between" a "center" */
+	gap: 30px; /* Agregado para dar espacio entre las tarjetas */
+  }
+  
+  #productos .card {
 	border: none;
 	margin-bottom: 30px;
-	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 	transition: 0.3s;
 	flex-basis: calc(33.33% - 20px);
-	}
-	
-	#productos .card:hover {
-	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-	}
-	
-	#productos .card-img-top {
+  }
+  
+  #productos .card:hover {
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  }
+  
+  #productos .card-img-top {
 	width: 100%;
-	height: auto;
+	height: 400px;
 	object-fit: cover;
 	object-position: center;
-	}
-	
-	#productos .card-body {
+  }
+  
+  #productos .card-body {
 	padding: 20px;
-	}
-	
-	#productos .card-title {
+  }
+  
+  #productos .card-title {
 	font-size: 24px;
 	font-weight: bold;
 	margin-bottom: 10px;
-	}
-	
-	#productos .card-text {
-	font-size: 16px;
+  }
+  
+  #productos .card-text {
+	font-size: 18px; /* Cambiado de 14px a 16px para que se vea del mismo tamaño que el texto en la sección 2 */
 	text-align: justify;
-	}
-	
-	@media (max-width: 768px) {
+  }
+  
+  @media (max-width: 768px) {
 	#productos .card {
-	flex-basis: 100%;
-	margin-right: 0;
+	  flex-basis: 100%;
+	  margin-right: 0;
 	}
-	}
-
+  }
+  
+  
 	/*MARCAS*/
 #marcas {
 	background-color: #F5F5F5;
