--- a/estilo.css
+++ b/estilo.css
@@ -6,13 +6,12 @@
   
 body {
 	font-family: Arial, sans-serif;
-	background-color: #f2f2f2;
-	color: #333;
+	background-color: #ffffff;
+	color: #000000;
 	margin: 0;
 	padding: 0;
 }
 #quienes-somos {
-	background-image: url(https://www.leotertenerife.com/wp-content/uploads/2016/07/FONDO-ROJO.png);
 	background-size: cover;
 	background-position: center;
 	padding: 30px;
@@ -22,17 +21,17 @@ body {
   #quienes-somos h2 {
 	font-size: 36px;
 	font-weight: bold;
-	color: #fff;
+	color: #000000;
 	margin-bottom: 20px;
-	text-shadow: 2px 2px 5px #000;
+	text-shadow: 2px 2px 5px #fff4f4;
   }
   
   #quienes-somos p {
 	font-size: 18px;
 	line-height: 1.5;
-	color: #fff;
+	color: #000000;
 	margin-bottom: 20px;
-	text-shadow: 2px 2px 5px #000;
+	text-shadow: 2px 2px 5px #ffffff;
   }
 
   #quienes-somos {
@@ -168,8 +167,8 @@ h1 {
 
 /* Estilos para el pie de página */
 footer {
-	background-color: #252935;
-	color: #fff;
+	background-color: #f5f5f8;
+	color: #171515;
 	padding: 50px 0;
   }
   
