--- a/estilo.css
+++ b/estilo.css
@@ -205,7 +205,7 @@ footer {
 .social-icons a {
   margin-right: 35px;
   text-decoration: none;
-  color: #ffffff;
+  color: #000000;
 }
 
 .social-icons a:hover {
