--- a/estilo.css
+++ b/estilo.css
@@ -1,48 +1,479 @@
-/* Estilos para el cuerpo de la página */
-.logo {
-	height: 50px;
-	width: 60px;
-  }
-  
+:root {
+	--background-color: #ffffff;
+	--text-color: #000000;
+}
+
 body {
+	background-color: var(--background-color);
+	color: var(--text-color);
 	font-family: Arial, sans-serif;
-	background-color: #ffffff;
-	color: #000000;
 	margin: 0;
 	padding: 0;
 }
-#quienes-somos {
-	background-size: cover;
-	background-position: center;
-	padding: 30px;
-	text-align: justify;
-  }
-  
-  #quienes-somos h2 {
-	font-size: 36px;
-	font-weight: bold;
-	color: #000000;
-	margin-bottom: 20px;
-	text-shadow: 2px 2px 5px #fff4f4;
-  }
-  
-  #quienes-somos p {
-	font-size: 18px;
-	line-height: 1.5;
-	color: #000000;
-	margin-bottom: 20px;
-	text-shadow: 2px 2px 5px #ffffff;
-  }
 
-  #quienes-somos {
-	margin-top: 70px;
-  }
-
-  #quienes-somos {
-    padding-top: 80px;
+h1, h2, h3, h4, h5, h6,h5 .card-title,p.card-text {
+	color: #000000;
 }
 
-  
+/* Estilos para el encabezado */
+header {
+	background-color: var(--background-color);
+	padding: 30px;
+}
+
+header h1 {
+	text-align: center;
+	font-size: 36px;
+	margin-bottom: 20px;
+}
+
+/* Estilos para la barra de navegación */
+nav {
+	background-color: var(--background-color);
+	padding: 20px 0;
+}
+
+nav ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	justify-content: center;
+}
+
+nav ul li {
+	margin: 0 10px;
+}
+
+nav ul li a {
+	color: var(--text-color);
+	text-decoration: none;
+	font-size: 18px;
+}
+
+/* Estilos para el pie de página */
+footer {
+	background-color: var(--background-color);
+	color: var(--text-color);
+	padding: 50px 0;
+}
+
+/* Estilos para la sección de contacto */
+#contactanos {
+	background-color: var(--background-color);
+	padding: 50px;
+}
+
+#contactanos h2 {
+	text-align: center;
+	font-size: 32px;
+	margin-bottom: 30px;
+	color: var(--text-color);
+}
+
+/* Estilos para la sección de productos */
+#productos {
+	background-color: var(--background-color);
+	padding: 50px;
+	text-align: center;
+}
+
+#productos h2 {
+	font-size: 36px;
+	font-weight: bold;
+	margin-bottom: 30px;
+	color: var(--text-color);
+}
+
+/* Estilos para la sección de marcas */
+#marcas {
+	background-color: var(--background-color);
+	padding: 80px 0;
+}
+
+#marcas h2 {
+	font-size: 40px;
+	text-align: center;
+	margin-bottom: 40px;
+	color: var(--text-color);
+}
+
+/* Estilos para el tema oscuro */
+body.dark-mode {
+	--background-color: #333333;
+	--text-color: #ffffff;
+}
+
+.dark-mode h1, .dark-mode h2, .dark-mode h3, .dark-mode h4, .dark-mode h5, .dark-mode h6 {
+	color: var(--text-color);
+}
+
+.dark-mode header {
+	background-color: var(--background-color);
+}
+
+.dark-mode nav {
+	background-color: var(--background-color);
+}
+
+.dark-mode nav ul li a {
+	color: var(--text-color);
+}
+
+.dark-mode footer {
+	background-color: var(--background-color);
+	color: var(--text-color);
+}
+
+.dark-mode #contactanos {
+	background-color: var(--background-color);
+}
+
+.dark-mode #contactanos h2 {
+	color: var(--text-color);
+}
+
+.dark-mode #productos {
+	background-color: var(--background-color);
+}
+
+.dark-mode #productos h2 {
+	color: var(--text-color);
+}
+
+.dark-mode #marcas {
+	background-color: var(--background-color);
+}
+
+.dark-mode #marcas h2 {
+	color: var(--text-color);
+}
+
+/* Estilos adicionales para cada sección */
+
+/* Estilos para la sección 1 */
+#seccion1 {
+	background-color: var(--background-color);
+	padding: 50px;
+}
+
+#seccion1 h2 {
+	font-size: 36px;
+	font-weight: bold;
+	margin-bottom: 30px;
+	color: var(--text-color);
+}
+
+/* Estilos para la sección 2 */
+#seccion2 {
+	background-color: var(--background-color);
+	padding: 50px;
+}
+
+#seccion2 h2 {
+	font-size: 36px;
+	font-weight: bold;
+	margin-bottom: 30px;
+	color: var(--text-color);
+}
+
+/* Estilos para la sección 3 */
+#seccion3 {
+	background-color: var(--background-color);
+	padding: 50px;
+}
+
+#seccion3 h2 {
+	font-size: 36px;
+	font-weight: bold;
+	margin-bottom: 30px;
+	color: var(--text-color);
+}
+
+/* Estilos para la sección 4 */
+#seccion4 {
+	background-color: var(--background-color);
+	padding: 50px;
+}
+
+#seccion4 h2 {
+	font-size: 36px;
+	font-weight: bold;
+	margin-bottom: 30px;
+	color: var(--text-color);
+}
+
+/* Estilos para la sección 5 */
+#seccion5 {
+	background-color: var(--background-color);
+	padding: 50px;
+}
+
+#seccion5 h2 {
+	font-size: 36px;
+	font-weight: bold;
+	margin-bottom: 30px;
+	color: var(--text-color);
+}
+
+/* Estilos para la sección 6 */
+#seccion6 {
+	background-color: var(--background-color);
+	padding: 50px;
+}
+
+#seccion6 h2 {
+	font-size: 36px;
+	font-weight: bold;
+	margin-bottom: 30px;
+	color: var(--text-color);
+}
+
+/*MARCAS*/
+#marcas {
+	background-color: #ffffff;
+	padding: 80px 0;
+}
+
+#marcas h2 {
+	font-size: 40px;
+	text-align: center;
+	margin-bottom: 40px;
+}
+
+.marca {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 150px;
+	margin-bottom: 40px;
+	background-color: white;
+	border-radius: 10px;
+	box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+	transition: transform 0.2s ease-in-out;
+}
+
+.marca:hover {
+	transform: scale(1.1);
+}
+
+.marca img {
+	height: 100px;
+}
+
+@media screen and (max-width: 768px) {
+	.marca {
+		height: 120px;
+	}
+	.marca img {
+		height: 80px;
+	}
+}
+/* Agregamos un estilo para los mensajes de éxito o error */
+#status-message {
+	padding: 10px;
+	margin-top: 20px;
+	font-size: 16px;
+	color: white;
+	border-radius: 5px;
+}
+
+#status-message.success {
+	background-color: #4caf50;
+}
+
+#status-message.error {
+	background-color: #f44336;
+}
+
+/*Nuevas marcas*/
+.col-md-3:nth-child(5) .marca img {
+	height: 80px;
+}
+
+.col-md-3:nth-child(5) .marca:hover {
+	transform: scale(1.1) rotate(-5deg);
+}
+
+.col-md-3:nth-child(5) .marca {
+	background-color: white;
+}
+
+.col-md-3:nth-child(6) .marca img {
+	height: 80px;
+}
+
+.col-md-3:nth-child(6) .marca:hover {
+	transform: scale(1.1) rotate(5deg);
+}
+
+.col-md-3:nth-child(6) .marca {
+	background-color: white;
+}
+
+.col-md-3:nth-child(7) .marca img {
+	height: 80px;
+}
+
+.col-md-3:nth-child(7) .marca:hover {
+	transform: scale(1.1) rotate(-5deg);
+}
+
+.col-md-3:nth-child(7) .marca {
+	background-color: white;
+}
+
+#productos {
+padding: 50px;
+text-align: center;
+}
+
+#productos h2 {
+font-size: 36px;
+font-weight: bold;
+margin-bottom: 30px;
+}
+
+#productos .container {
+display: flex;
+flex-wrap: wrap;
+justify-content: center; /* Cambiado de "space-between" a "center" */
+gap: 30px; /* Agregado para dar espacio entre las tarjetas */
+}
+
+#productos .card {
+border: none;
+margin-bottom: 30px;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+transition: 0.3s;
+flex-basis: calc(33.33% - 20px);
+}
+
+#productos .card:hover {
+box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+#productos .card-img-top {
+width: 100%;
+height: 400px;
+object-fit: cover;
+object-position: center;
+}
+
+#productos .card-body {
+padding: 20px;
+}
+
+#productos .card-title {
+font-size: 24px;
+font-weight: bold;
+margin-bottom: 10px;
+}
+
+#productos .card-text {
+font-size: 18px; /* Cambiado de 14px a 16px para que se vea del mismo tamaño que el texto en la sección 2 */
+text-align: justify;
+}
+
+@media (max-width: 768px) {
+#productos .card {
+	flex-basis: 100%;
+	margin-right: 0;
+}
+}
+
+#contactanos {
+	background-color: #ffffff;
+	padding: 50px;
+}
+
+#contactanos h2 {
+	text-align: center;
+	font-size: 32px;
+	margin-bottom: 30px;
+	color: var(--text-color);
+}
+
+#contact-form {
+	display: flex;
+	flex-direction: column;
+	max-width: 600px;
+	margin: 0 auto;
+}
+
+.form-group {
+	margin-bottom: 20px;
+}
+
+.form-group label {
+	display: block;
+	margin-bottom: 5px;
+	color: var(--text-color);
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+textarea {
+	border: 1px solid #000000;
+	padding: 10px;
+	width: 100%;
+	font-size: 16px;
+	color: var(--text-color);
+}
+
+.social-icons {
+	display: flex;
+	align-items: center;
+}
+
+.social-icons a {
+	margin-right: 35px;
+	text-decoration: none;
+	color: #000000;
+}
+
+.social-icons a:hover {
+	color: #fb0909;
+}
+
+.social-icons i {
+	font-size: 30px;
+	margin-right: 20px;
+}
+
+/* Estilos para el pie de página */
+footer {
+	background-color: #ffffff;
+	color: #171515;
+	padding: 50px 0;
+}
+
+footer h4 {
+	margin-bottom: 20px;
+}
+
+footer p {
+	font-size: 16px;
+	line-height: 24px;
+}
+
+footer ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+footer li {
+	display: inline-block;
+	margin-right: 20px;
+}
+
+footer a {
+	color: #fff;
+	font-size: 24px;
+}
+
 /* Estilos para el encabezado */
 .navbar-brand {
 	height: 50px;
@@ -62,15 +493,15 @@ body {
 	top: 0;
 	width: 100%;
 	z-index: 9999;
-	background-color: #fff;
+	background-color: #ffffff;
 }
 
 .navbar .navbar-collapse {
-	background-color: #fff;
+	background-color: #ffffff;
 }
 
 .navbar .navbar-nav .nav-item .nav-link:hover {
-	color: #b32323;
+	color: #cf0a0a;
 }
 
 .logo {
@@ -79,8 +510,8 @@ body {
 }
 
 .header {
-	background-color: #b32323;
-	color: #fff;
+	background-color: #ffffff;
+	color: #ffffff;
 	padding: 20px 0;
 }
 
@@ -91,359 +522,59 @@ body {
 	text-align: center;
 }
 
-/* Estilos adicionales */
-.navbar-collapse.show {
-	background-color: #fff;
-}
-
-.dropdown-menu {
-    left: -50px;
-}
-
-.dropdown-menu a {
-  display: flex;
-  align-items: center;
-  color: #333;
-}
-
-.dropdown-menu i {
-  margin-right: 10px;
-}
-
-.dropdown-menu a:hover {
-  color: #b32323;
-}
-  
-  /* Estilos para las secciones */
-  section {
-	padding: 50px 0;
-  }
-  
-  h2 {
-	font-size: 2.5rem;
-	margin-bottom: 30px;
-  }
-
-/* Estilos para el título de la página */
-h1 {
+/* Estilos para el cuerpo de la página */
+body:first-child {
+	font-family: Arial, sans-serif;
+	color: #000000;
 	margin: 0;
-	font-size: 36px;
-	color: #333;
-	
+	padding: 0;
+}
+
+#quienes-somos {
+	background-size: cover;
+	background-position: center;
+	padding: 30px;
+	text-align: justify;
+}
+
+
+#quienes-somos {
+	margin-top: 70px;
+}
+
+#quienes-somos {
+	padding-top: 80px;
 }
 
 #ubicacion {
-	background-color: #fff;
+	background-color: var(--background-color);
 	padding: 80px 0;
-  }
-  
-  .section-title {
+}
+
+.section-title {
 	font-size: 36px;
 	font-weight: 700;
 	text-align: center;
 	margin-bottom: 40px;
-  }
-  
-  .section-description {
+}
+
+.section-description {
 	font-size: 18px;
 	font-weight: 400;
 	text-align: center;
 	margin-bottom: 50px;
-  }
-  
-  .map-container {
+}
+
+.map-container {
 	position: relative;
 	overflow: hidden;
 	padding-top: 56.25%; /* 16:9 aspect ratio */
-  }
-  
-  .map-container iframe {
+}
+
+.map-container iframe {
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-  }  
-
-/* Estilos para el pie de página */
-footer {
-	background-color: #f5f5f8;
-	color: #171515;
-	padding: 50px 0;
-  }
-  
-  footer h4 {
-	margin-bottom: 20px;
-  }
-  
-  footer p {
-	font-size: 16px;
-	line-height: 24px;
-  }
-  
-  footer ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-  }
-  
-  footer li {
-	display: inline-block;
-	margin-right: 20px;
-  }
-  
-  footer a {
-	color: #fff;
-	font-size: 24px;
-  }
-  
- .social-icons {
-  display: flex;
-  align-items: center;
 }
-
-.social-icons a {
-  margin-right: 35px;
-  text-decoration: none;
-  color: #000000;
-}
-
-.social-icons a:hover {
-  color: #fb0909;
-}
-
-.social-icons i {
-  font-size: 30px;
-  margin-right: 20px;
-}
-
-@media only screen and (max-width: 768px) {
-  .social-icons i {
-    font-size: 20px;
-  }
-}
-
-#seccion4 {
-	background-color: #ff8080;
-	padding: 50px;
-}
-
-#seccion4 h2 {
-	text-align: center;
-	font-size: 36px;
-	margin-bottom: 30px;
-	color: white;
-	text-shadow: 2px 2px 2px #333;
-}
-
-#contactanos {
-	background-color: #f2f2f2;
-	padding: 50px;
-}
-
-#contactanos h2 {
-	text-align: center;
-	font-size: 32px;
-	margin-bottom: 30px;
-	color: #333;
-}
-
-#contact-form {
-	display: flex;
-	flex-direction: column;
-	max-width: 600px;
-	margin: 0 auto;
-}
-
-.form-group {
-	margin-bottom: 20px;
-}
-
-.form-group label {
-	display: block;
-	margin-bottom: 5px;
-	color: #000000;
-}
-
-input[type="text"],
-input[type="email"],
-input[type="tel"],
-textarea {
-	border: 1px solid #ee2525;
-	padding: 10px;
-	width: 100%;
-	font-size: 16px;
-	color: #333;
-}
-
-button[type="submit"] {
-	background-color: #ee2525;
-	color: #fff;
-	border: none;
-	padding: 10px 20px;
-	font-size: 16px;
-	cursor: pointer;
-	transition: background-color 0.3s ease;
-	margin-top: 20px;
-}
-
-button[type="submit"]:hover {
-	background-color: #e61818;
-}
-
-/* Agregamos un estilo para los mensajes de éxito o error */
-#status-message {
-	padding: 10px;
-	margin-top: 20px;
-	font-size: 16px;
-	color: white;
-	border-radius: 5px;
-}
-
-#status-message.success {
-	background-color: #4caf50;
-}
-
-#status-message.error {
-	background-color: #f44336;
-}
-
-/* Estilos para la sección de productos */
-#productos {
-	background-color: #f9f9f9;
-	padding: 50px;
-	text-align: center;
-  }
-  
-  #productos h2 {
-	font-size: 36px;
-	font-weight: bold;
-	margin-bottom: 30px;
-  }
-  
-  #productos .container {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center; /* Cambiado de "space-between" a "center" */
-	gap: 30px; /* Agregado para dar espacio entre las tarjetas */
-  }
-  
-  #productos .card {
-	border: none;
-	margin-bottom: 30px;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-	transition: 0.3s;
-	flex-basis: calc(33.33% - 20px);
-  }
-  
-  #productos .card:hover {
-	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-  }
-  
-  #productos .card-img-top {
-	width: 100%;
-	height: 400px;
-	object-fit: cover;
-	object-position: center;
-  }
-  
-  #productos .card-body {
-	padding: 20px;
-  }
-  
-  #productos .card-title {
-	font-size: 24px;
-	font-weight: bold;
-	margin-bottom: 10px;
-  }
-  
-  #productos .card-text {
-	font-size: 18px; /* Cambiado de 14px a 16px para que se vea del mismo tamaño que el texto en la sección 2 */
-	text-align: justify;
-  }
-  
-  @media (max-width: 768px) {
-	#productos .card {
-	  flex-basis: 100%;
-	  margin-right: 0;
-	}
-  }
-  
-  
-	/*MARCAS*/
-#marcas {
-	background-color: #F5F5F5;
-	padding: 80px 0;
-  }
-  
-  #marcas h2 {
-	font-size: 40px;
-	text-align: center;
-	margin-bottom: 40px;
-  }
-  
-  .marca {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 150px;
-	margin-bottom: 40px;
-	background-color: white;
-	border-radius: 10px;
-	box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-	transition: transform 0.2s ease-in-out;
-  }
-  
-  .marca:hover {
-	transform: scale(1.1);
-  }
-  
-  .marca img {
-	height: 100px;
-  }
-  
-  @media screen and (max-width: 768px) {
-	.marca {
-	  height: 120px;
-	}
-	.marca img {
-	  height: 80px;
-	}
-  }
-  
-  /*Nuevas marcas*/
-  .col-md-3:nth-child(5) .marca img {
-	height: 80px;
-  }
-  
-  .col-md-3:nth-child(5) .marca:hover {
-	transform: scale(1.1) rotate(-5deg);
-  }
-  
-  .col-md-3:nth-child(5) .marca {
-	background-color: white;
-  }
-  
-  .col-md-3:nth-child(6) .marca img {
-	height: 80px;
-  }
-  
-  .col-md-3:nth-child(6) .marca:hover {
-	transform: scale(1.1) rotate(5deg);
-  }
-  
-  .col-md-3:nth-child(6) .marca {
-	background-color: white;
-  }
-  
-  .col-md-3:nth-child(7) .marca img {
-	height: 80px;
-  }
-  
-  .col-md-3:nth-child(7) .marca:hover {
-	transform: scale(1.1) rotate(-5deg);
-  }
-  
-  .col-md-3:nth-child(7) .marca {
-	background-color: white;
-  }
