--- a/estilo.css
+++ b/estilo.css
@@ -382,45 +382,7 @@ text-align: justify;
 }
 }
 
-#contactanos {
-	background-color: #ffffff;
-	padding: 50px;
-}
 
-#contactanos h2 {
-	text-align: center;
-	font-size: 32px;
-	margin-bottom: 30px;
-	color: var(--text-color);
-}
-
-#contact-form {
-	display: flex;
-	flex-direction: column;
-	max-width: 600px;
-	margin: 0 auto;
-}
-
-.form-group {
-	margin-bottom: 20px;
-}
-
-.form-group label {
-	display: block;
-	margin-bottom: 5px;
-	color: var(--text-color);
-}
-
-input[type="text"],
-input[type="email"],
-input[type="tel"],
-textarea {
-	border: 1px solid #000000;
-	padding: 10px;
-	width: 100%;
-	font-size: 16px;
-	color: var(--text-color);
-}
 
 .social-icons {
 	display: flex;
@@ -578,3 +540,36 @@ body:first-child {
 	width: 100%;
 	height: 100%;
 }
+
+#registros {
+	text-align: center;
+	padding: 20px;
+	background-color: var(--background-color);
+  }
+  
+  #registros h2 {
+	font-size: 44px;
+	font-weight: bold;
+	margin-bottom: 10px;
+  }
+  
+  
+  #registros p {
+	font-size: 16px;
+	margin-bottom: 20px;
+  }
+  
+  #registros button {
+	padding: 10px 20px;
+	font-size: 16px;
+	background-color: #d41a14;
+	color: white;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+  }
+  
+  #registros button:hover {
+	background-color: #da1f1f;
+  }
+  
